--- a/_news/6.md
+++ b/_news/6.md
@@ -4,4 +4,4 @@ date: 2020-06-05 07:59:00-0400
 inline: true
 ---
 
-*I am excited to announce that I received the NSF CAREER Award from the Computer Systems Research program in the Division of Computer and Network Systems! Thanks for NSF's tremendous support!*
+**I am excited to announce that I received the NSF CAREER Award from the Computer Systems Research program in the Division of Computer and Network Systems! Thanks for NSF's tremendous support!**
